# base-autotools-project

./: .gitignore  Makefile.am  configure.ac
build-aux/: git-version-gen
